--- a/app/index.html
+++ b/app/index.html
@@ -269,7 +269,9 @@
     <script src="scripts/controllers/pages-login.js"></script>
 	<script src="scripts/controllers/page-addinterface.js"></script>
 	<script src="scripts/controllers/page-interfacelist.js"></script>
+	<script src="scripts/controllers/page-libraryList.js"></script>
 	<script src="scripts/controllers/page-viewinterface.js"></script>
+	<script src="scripts/controllers/page-viewlibrary.js"></script>
 	<script src="scripts/controllers/page-joblist.js"></script>	
 	<script src="scripts/controllers/page-viewflow.js"></script>	
 	<script src="scripts/controllers/page-addLibraryProperties.js"></script>
