edit interface changes and updated all jobs according to svn
edit interface changes and updated all jobs according to svn

--- a/app/index.html
+++ b/app/index.html
@@ -272,6 +272,7 @@
 	<script src="scripts/controllers/page-libraryList.js"></script>
 	<script src="scripts/controllers/page-viewinterface.js"></script>
 	<script src="scripts/controllers/page-viewlibrary.js"></script>
+		<script src="scripts/controllers/page-editinterface.js"></script>
 	<script src="scripts/controllers/page-joblist.js"></script>	
 	<script src="scripts/controllers/page-viewflow.js"></script>	
 	<script src="scripts/controllers/page-addLibraryProperties.js"></script>
