--- a/app/index.html
+++ b/app/index.html
@@ -273,6 +273,7 @@
 	<script src="scripts/controllers/page-viewinterface.js"></script>
 	<script src="scripts/controllers/page-viewlibrary.js"></script>
 		<script src="scripts/controllers/page-editinterface.js"></script>
+		<script src="scripts/controllers/page-header.js"></script>
 	<script src="scripts/controllers/page-joblist.js"></script>	
 	<script src="scripts/controllers/page-viewflow.js"></script>	
 	<script src="scripts/controllers/page-addLibraryProperties.js"></script>
