--- a/app/index.html
+++ b/app/index.html
@@ -272,6 +272,8 @@
 	<script src="scripts/controllers/page-libraryList.js"></script>
 	<script src="scripts/controllers/page-viewinterface.js"></script>
 	<script src="scripts/controllers/page-viewlibrary.js"></script>
+	<script src="scripts/controllers/page-addlibrary.js"></script>
+	<script src="scripts/controllers/page-editlibrary.js"></script>
 		<script src="scripts/controllers/page-editinterface.js"></script>
 		<script src="scripts/controllers/page-header.js"></script>
 	<script src="scripts/controllers/page-joblist.js"></script>	
